--- a/home.html
+++ b/home.html
@@ -179,7 +179,7 @@
                     <i class="bi bi-geo-fill"></i>1234 Elm Street, Willowville,
                     USA
                   </div>
-                  <div class="row mt-2 d-flex align-items-center">
+                  <div class="row mt-2 mb-2 d-flex align-items-center">
                     <div class="col-3 fs-1 border-end text-end">25</div>
                     <div class="col-4 border-end text-center">
                       <p class="m-0"><strong>8/2024</strong></p>
@@ -195,8 +195,8 @@
                   </div>
                 </div>
                 <div class="col-md-3 col-sm-12 d-flex align-items-center">
-                  <button type="button" class="btn btn-danger btn-lg">
-                    Buy Now!
+                  <button type="button" class="btn btn-danger btn-lg w-100">
+                    Buy Now
                   </button>
                 </div>
               </div>
@@ -207,7 +207,7 @@
           <div class="card bg-light-subtle">
             <div class="card-body">
               <div class="row">
-                <div class="col-9 border-end">
+                <div class="col-md-9 col-m-12 border-end">
                   <p>LIVE PERFORMANCE TICKET</p>
                   <div class="pb-2 mb-4 border-bottom">
                     <p class="fs-3">REBBEL CONCERT</p>
@@ -216,7 +216,7 @@
                     <i class="bi bi-geo-fill"></i>1234 Elm Street, Willowville,
                     USA
                   </div>
-                  <div class="row mt-2 d-flex align-items-center">
+                  <div class="row mt-2 mb-2 d-flex align-items-center">
                     <div class="col-3 fs-1 border-end text-end">26</div>
                     <div class="col-4 border-end text-center">
                       <p class="m-0"><strong>8/2024</strong></p>
@@ -231,9 +231,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-3 d-flex align-items-center">
-                  <button type="button" class="btn btn-danger btn-lg">
-                    Buy Now!
+                <div class="col-md-3 col-sm-12 d-flex align-items-center">
+                  <button type="button" class="btn btn-danger btn-lg w-100">
+                    Buy Now
                   </button>
                 </div>
               </div>
@@ -244,7 +244,7 @@
           <div class="card bg-light-subtle">
             <div class="card-body">
               <div class="row">
-                <div class="col-9 border-end">
+                <div class="col-md-9 col-sm-12 border-end">
                   <p>LIVE PERFORMANCE TICKET</p>
                   <div class="pb-2 mb-4 border-bottom">
                     <p class="fs-3">REBBEL CONCERT</p>
@@ -253,7 +253,7 @@
                     <i class="bi bi-geo-fill"></i>1234 Elm Street, Willowville,
                     USA
                   </div>
-                  <div class="row mt-2 d-flex align-items-center">
+                  <div class="row mt-2 mb-2 d-flex align-items-center">
                     <div class="col-3 fs-1 border-end text-end">27</div>
                     <div class="col-4 border-end text-center">
                       <p class="m-0"><strong>8/2024</strong></p>
@@ -268,9 +268,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-3 d-flex align-items-center">
-                  <button type="button" class="btn btn-danger btn-lg">
-                    Buy Now!
+                <div class="col-md-3 col-sm-12 d-flex align-items-center">
+                  <button type="button" class="btn btn-danger btn-lg w-100">
+                    Buy Now
                   </button>
                 </div>
               </div>
