--- a/home.html
+++ b/home.html
@@ -87,12 +87,27 @@
     </section>
 
     <!-- LED-->
-    <section class="justify-content-center border-panel bg-black m-0">
-      <div class="col-12 text-center led">
-        <span class="neon-effect"
-          >REBBEL CONCERT 2024 🤘 26, 27, 28 AUGUST 08:00 PM - ARENA HALL</span
-        >
-      </div>
+    <section class="justify-content-center border-panel bg-black m-0 p-0">
+
+<!-- <div class="wrapper">
+  <div class="col-12 text-center led neon-effect">
+    <span class=""
+      ><p>REBBEL CONCERT 2024 🤘 26, 27, 28 AUGUST 08:00 PM - ARENA HALL</p></span
+    >
+  </div>
+</div> -->
+
+<div class="wrapper">
+  <div class="marquee led">
+    <p class="neon-effect m-0">
+      REBBEL CONCERT 2024 - 26, 27, 28 AUGUST 08:00 PM - ARENA HALL 🤘
+    </p>
+    <p class="neon-effect m-0">
+      REBBEL CONCERT 2024 - 26, 27, 28 AUGUST 08:00 PM - ARENA HALL 🤘
+    </p>
+  </div>
+</div>
+     
     </section>
     <!-- BANDS -->
     <section id="bands">
