--- a/home.html
+++ b/home.html
@@ -6,8 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Rebbel Concert</title>
-
+    <meta content="TEVERYTHING ABOUT THE BIGGEST ROCK AND ENTERTAINMENT FESTIVAL IN THE WORLD" name="description">
+    <meta name="keywords" content="music festival, entertainment, world, rock">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Rafaela Alves">
+    <title>Rebbel Concert - Official real-time information. </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Russo+One&display=swap"
@@ -88,26 +91,16 @@
 
     <!-- LED-->
     <section class="justify-content-center border-panel bg-black m-0 p-0">
-
-<!-- <div class="wrapper">
-  <div class="col-12 text-center led neon-effect">
-    <span class=""
-      ><p>REBBEL CONCERT 2024 🤘 26, 27, 28 AUGUST 08:00 PM - ARENA HALL</p></span
-    >
-  </div>
-</div> -->
-
-<div class="wrapper">
-  <div class="marquee led">
-    <p class="neon-effect m-0">
-      REBBEL CONCERT 2024 - 26, 27, 28 AUGUST 08:00 PM - ARENA HALL 🤘
-    </p>
-    <p class="neon-effect m-0">
-      REBBEL CONCERT 2024 - 26, 27, 28 AUGUST 08:00 PM - ARENA HALL 🤘
-    </p>
-  </div>
-</div>
-     
+      <div class="wrapper">
+        <div class="marquee led">
+          <p class="neon-effect m-0">
+            REBBEL CONCERT 2024 - 26, 27, 28 AUGUST 08:00 PM - ARENA HALL 🤘
+          </p>
+          <p class="neon-effect m-0">
+            REBBEL CONCERT 2024 - 26, 27, 28 AUGUST 08:00 PM - ARENA HALL 🤘
+          </p>
+        </div>
+      </div>
     </section>
     <!-- BANDS -->
     <section id="bands">
