--- a/home.html
+++ b/home.html
@@ -10,7 +10,9 @@
     <meta name="keywords" content="music festival, entertainment, world, rock">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Rafaela Alves">
+  
     <title>Rebbel Concert - Official real-time information. </title>
+    <link rel="icon" href="./img/logo.jpeg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Russo+One&display=swap"
