--- a/home.html
+++ b/home.html
@@ -6,13 +6,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta content="TEVERYTHING ABOUT THE BIGGEST ROCK AND ENTERTAINMENT FESTIVAL IN THE WORLD" name="description">
-    <meta name="keywords" content="music festival, entertainment, world, rock">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Rafaela Alves">
-  
-    <title>Rebbel Concert - Official real-time information. </title>
-    <link rel="icon" href="./img/logo.jpeg" type="image/x-icon">
+    <meta
+      content="TEVERYTHING ABOUT THE BIGGEST ROCK AND ENTERTAINMENT FESTIVAL IN THE WORLD"
+      name="description"
+    />
+    <meta
+      name="keywords"
+      content="music festival, entertainment, world, rock"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Rafaela Alves" />
+
+    <title>Rebbel Concert - Official real-time information.</title>
+    <link rel="icon" href="./img/logo.jpeg" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Russo+One&display=swap"
@@ -83,7 +89,7 @@
         <div
           class="flipper pt-5"
           data-reverse="true"
-          data-datetime="2025-01-01 00:00:00"
+          data-datetime="2024-08-01 00:00:00"
           data-template="ddd|HH|ii|ss"
           data-labels="Days|Hours|Minutes|Seconds"
           id="myFlipper"
@@ -114,7 +120,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="text-center text-white p-5">
-              <span class="border border-dark text-center p-1 f-russso-one fs-5"
+              <span class="text-center p-1 f-russso-one fs-5"
                 >DAY 1</span
               >
               <div class="fade-in pt-2">
@@ -126,7 +132,7 @@
           </div>
           <div class="carousel-item">
             <div class="text-center text-white p-5">
-              <span class="border border-dark text-center p-1 f-russso-one fs-5"
+              <span class="text-center p-1 f-russso-one fs-5"
                 >DAY 2</span
               >
               <div class="fade-in pt-2">
@@ -138,7 +144,7 @@
           </div>
           <div class="carousel-item">
             <div class="text-center text-white p-5">
-              <span class="border border-dark text-center p-1 f-russso-one fs-5"
+              <span class="text-center p-1 f-russso-one fs-5"
                 >DAY 3</span
               >
               <div class="fade-in">
@@ -177,7 +183,7 @@
       </h3>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
-          <div class="card bg-light-subtle">
+          <div class="card bg-light-subtle card-ticket">
             <div class="card-body">
               <div class="row">
                 <div class="col-md-9 col-sm-12 border-end">
@@ -196,25 +202,23 @@
                       <p class="m-0"><strong>8 pm</strong></p>
                     </div>
                     <div class="col-5">
-                      <div
-                        class="bg-secondary-subtle text-center p-2 fs-4 text"
-                      >
-                        DAY 1
-                      </div>
+                      <button type="button" class="btn btn-danger btn-lg w-100">
+                        Buy
+                      </button>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-3 col-sm-12 d-flex align-items-center">
-                  <button type="button" class="btn btn-danger btn-lg w-100">
-                    Buy Now
-                  </button>
+                  <div class="bg-secondary-subtle text-center p-2 fs-4 w-100">
+                    DAY 1
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card bg-light-subtle">
+          <div class="card bg-light-subtle card-ticket">
             <div class="card-body">
               <div class="row">
                 <div class="col-md-9 col-m-12 border-end">
@@ -233,25 +237,23 @@
                       <p class="m-0"><strong>8 pm</strong></p>
                     </div>
                     <div class="col-5">
-                      <div
-                        class="bg-secondary-subtle text-center p-2 fs-4 text"
-                      >
-                        DAY 2
-                      </div>
+                      <button type="button" class="btn btn-danger btn-lg w-100">
+                        Buy
+                      </button>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-3 col-sm-12 d-flex align-items-center">
-                  <button type="button" class="btn btn-danger btn-lg w-100">
-                    Buy Now
-                  </button>
+                  <div class="bg-secondary-subtle text-center p-2 fs-4 text w-100">
+                    DAY 2
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card bg-light-subtle">
+          <div class="card bg-light-subtle card-ticket">
             <div class="card-body">
               <div class="row">
                 <div class="col-md-9 col-sm-12 border-end">
@@ -270,18 +272,16 @@
                       <p class="m-0"><strong>8 pm</strong></p>
                     </div>
                     <div class="col-5">
-                      <div
-                        class="bg-secondary-subtle text-center p-2 fs-4 text"
-                      >
-                        DAY 3
-                      </div>
+                      <button type="button" class="btn btn-danger btn-lg w-100">
+                        Buy
+                      </button>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-3 col-sm-12 d-flex align-items-center">
-                  <button type="button" class="btn btn-danger btn-lg w-100">
-                    Buy Now
-                  </button>
+                  <div class="bg-secondary-subtle text-center p-2 fs-4 text w-100">
+                    DAY 3
+                  </div>
                 </div>
               </div>
             </div>
@@ -296,8 +296,9 @@
         <h3 class="text-center f-russso-one fs-1 p-5">CONTACT US</h3>
 
         <div class="row">
-          <div class="col text-center">
-            <i class="bi bi-envelope-paper" style="font-size: 300px"></i>
+          <div class="col text-center" id="img-contact-us">
+            <img src="img/rock.png" height="300" width="300"
+          />
           </div>
           <div class="col">
             <form>
@@ -337,10 +338,10 @@
       </div>
     </section>
 
-    <!-- Rodapé -->
+    <!-- FOOTER -->
     <footer class="py-3 text-center bg-black text-white">
       <div class="container">
-        <p>&copy; 2024 Festival de Rock. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Rebbel Concert. All rights reserved.</p>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
