--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
               <a
                 class="nav-link btn btn-outline-danger text-white"
                 href="#bands"
-                >Bands</a
+                >Line-up</a
               >
             </li>
             <li class="nav-item">
