--- a/home.html
+++ b/home.html
@@ -39,14 +39,17 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-black fixed-top">
-      <div class="container">
+      <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="#">
           <span class="navbar-logo pe-1"
             ><img src="img/logo.jpeg" height="50" width="50"
           /></span>
           <span class="f-new-rocker">Rebbel Concert </span></a
         >
-        <div class="collapse navbar-collapse justify-content-end">
+        <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navRebbel" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navRebbel">
           <ul class="navbar-nav f-new-rocker">
             <li class="nav-item active">
               <a
@@ -85,7 +88,7 @@
     <section id="about" class="text-center d-flex align-items-center">
       <div class="w-100">
         <h1 class="main-title display-1 f-new-rocker">Rebbel Concert</h1>
-        <p>An unforgettable experience of music, fun, and energy!</p>
+        <p class="p-1">An unforgettable experience of music, fun, and energy!</p>
         <div
           class="flipper pt-5"
           data-reverse="true"
@@ -344,6 +347,7 @@
         <p>&copy; 2024 Rebbel Concert. All rights reserved.</p>
       </div>
     </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/flip-clock.js"></script>
