--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
     />
 
     <link href="css\style.css" rel="stylesheet" />
-    <link href="css\flip-clock.css" rel="stylesheet" />
+    <link href="css\flip-clock.min.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-black fixed-top">
@@ -350,6 +350,6 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="js/flip-clock.js"></script>
+    <script src="js/flip-clock.min.js"></script>
   </body>
 </html>
