--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     <meta name="author" content="Rafaela Alves" />
 
     <title>Rebbel Concert - Official real-time information.</title>
-    <link rel="icon" href="./img/logo.jpeg" type="image/x-icon" />
+    <link rel="icon" href="./img/logo.jpeg" type="image/x-icon" alt="logo" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Russo+One&display=swap"
@@ -42,7 +42,7 @@
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="#">
           <span class="navbar-logo pe-1"
-            ><img src="img/logo.jpeg" height="50" width="50"
+            ><img src="img/logo.jpeg" height="50" width="50" alt="logo"
           /></span>
           <span class="f-new-rocker">Rebbel Concert </span></a
         >
@@ -300,7 +300,7 @@
 
         <div class="row">
           <div class="col text-center" id="img-contact-us">
-            <img src="img/rock.png" height="300" width="300"
+            <img src="img/rock.png" height="300" width="300" alt="contact-img"
           />
           </div>
           <div class="col">
